# qr-pose-estimation

./: .gitignore  CMakeLists.txt  build.sh  qr-pose-estimation.sublime-project  qrcodestateestimation.sublime-project
calib/: logitech-c270-640x480.xml
cmake/: FindZBar.cmake
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cpp
pose-estimator/: CMakeLists.txt
pose-estimator/include/: QRCodeStateEstimator.hpp
pose-estimator/src/: QRCodeStateEstimator.cpp  SOMException.cpp  SOMScopeGuard.cpp
src/example/: main.cpp
